--- a/ludo.html
+++ b/ludo.html
@@ -12,6 +12,10 @@
         width: 20px;
         height: 20px;
       }
+      td img {
+        width: 100%;
+        height: 150px;
+      }
     </style>
   </head>
   <body>
@@ -22,11 +26,19 @@
         </caption>
         <tbody>
           <tr>
-            <td rowspan="6" colspan="6"></td>
+            <td
+              rowspan="6"
+              colspan="6"
+              style="background-color: rgb(248, 136, 136)"
+            >
+              <img src="images/lv.png" alt="" />
+            </td>
             <td></td>
             <td></td>
             <td></td>
-            <td rowspan="6" colspan="6"></td>
+            <td rowspan="6" colspan="6" style="background-color: red">
+              <img src="images/ars.png" alt="" />
+            </td>
           </tr>
           <tr>
             <td></td>
@@ -105,11 +117,15 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="6" colspan="6"></td>
+            <td rowspan="6" colspan="6" style="background-color: wheat">
+              <img src="images/rm.png" alt="" />
+            </td>
             <td></td>
             <td></td>
             <td></td>
-            <td rowspan="6" colspan="6"></td>
+            <td rowspan="6" colspan="6" style="background-color: blue">
+              <img src="images/chel.png" alt="" />
+            </td>
           </tr>
           <tr>
             <td></td>
